# proxyforge-apk

./: .gitignore  build_apk.sh  buildozer.spec  digital-clock.html  main.py  proxy_forge.py  proxy_forge_v10_professional.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml
