[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proxyforge-apk"
version = "0.1.0"
authors = [
    { name="Your Name", email="your.email@example.com" },
]
description = "A brief description of your project."
readme = "README.md"
license = "MIT"
keywords = ["proxy", "apk" ]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requirements = [
    "requests",
    "flask"
]